# plugin_system

./: Cargo.toml  flake.nix
src/: main.rs  plugin.rs
tests/: communication_msgs.rs  hello.wat  simple.rs  simple_struct.rs
